--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title:  "Business English in Bocholt"
 description: "Mary O'Keeffe unterrichtet Business English im Umkreis Bocholt."
-exclude: [Gemfile, Gemfile.lock, Rakefile, business-english.sublime-project, business-english.sublime-workspace]
+exclude: [Gemfile, Gemfile.lock, Rakefile, Rakefile.config, business-english.sublime-project, business-english.sublime-workspace]
 markdown: kramdown
