--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title:  "Business English in Bocholt"
 description: "Mary O'Keeffe unterrichtet Business English im Umkreis Bocholt."
 exclude: [Gemfile, Gemfile.lock, Rakefile, Rakefile.config, business-english.sublime-project, business-english.sublime-workspace]
 markdown: kramdown
+url: http://localhost
+baseurl: /~ArloLOK/business-english/
