Use Mum's favorite apostrophe for O´Keeffe

--- a/_config.live.yml
+++ b/_config.live.yml
@@ -1,5 +1,5 @@
 title:  "Business English in Bocholt"
-description: "Mary O'Keeffe unterrichtet Business English im Umkreis Bocholt."
+description: "Mary O´Keeffe unterrichtet Business English im Umkreis Bocholt."
 exclude: [Gemfile, Gemfile.lock, Rakefile, Rakefile.config, business-english.sublime-project, business-english.sublime-workspace]
 markdown: kramdown
 url: http://business-english-bocholt.de
