Remove Options configurations

--- a/.htaccess
+++ b/.htaccess
@@ -201,7 +201,7 @@ AddDefaultCharset utf-8
 # http://www.rackspace.com/knowledge_center/frequently-asked-question/why-is-mod-rewrite-not-working-on-my-site
 
 <IfModule mod_rewrite.c>
-    Options +FollowSymlinks
+  # Options +FollowSymlinks
   # Options +SymLinksIfOwnerMatch
     RewriteEngine On
     RewriteBase {{site.baseurl}}
@@ -299,7 +299,7 @@ AddDefaultCharset utf-8
 # private places like the CMS's directories).
 
 <IfModule mod_autoindex.c>
-    Options -Indexes
+  # Options -Indexes
 </IfModule>
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
