--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:  "Business English in Bocholt"
 description: "Mary O'Keeffe unterrichtet Business English im Umkreis Bocholt."
 exclude: [Gemfile, Gemfile.lock, Rakefile, Rakefile.config, business-english.sublime-project, business-english.sublime-workspace]
-url: http://arlol.github.io
+url: https://arlol.github.io
 baseurl: /business-english/
 language: de
