--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,14 @@ exclude: [Gemfile, Gemfile.lock, Rakefile, Rakefile.config, business-english.sub
 url: https://arlol.github.io
 baseurl: /business-english
 language: de
+compress_html:
+  clippings: all
+  comments:  ["<!-- ", " -->"]
+  endings:   all
+sass:
+  style: compressed
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
