--- a/.github/workflows/check-actions.yaml
+++ b/.github/workflows/check-actions.yaml
@@ -2,6 +2,11 @@ name: Check actions
 
 on:
   push:
+  pull_request:
+    branches:
+    - main
+    types:
+    - reopened
   schedule:
   - cron: "20 6 5 * *"
 permissions: {}
